--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^3.13.2",
+    "abort-controller": "^3.0.0",
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "hjson": "^3.2.2",
