--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "whatsapp-bot",
-  "version": "1.0.0",
+  "name": "the-multitasker",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,12 +9,13 @@
   "author": "Eyal Michon",
   "license": "ISC",
   "dependencies": {
-    "@open-wa/wa-automate": "^3.13.2",
+    "@open-wa/wa-automate": "^3.16.1",
     "abort-controller": "^3.0.0",
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "hjson": "^3.2.2",
     "puppeteer": "^9.1.1",
-    "sharp": "^0.28.2"
+    "sharp": "^0.28.3",
+    "video-url-link": "^0.1.4"
   }
 }
