--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-multitasker",
-  "version": "1.2",
+  "version": "1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,12 +13,14 @@
     "npm": "7.15.1"
   },
   "dependencies": {
-    "@open-wa/wa-automate": "^3.16.1",
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "@open-wa/wa-automate": "^4.11.1",
     "abort-controller": "^3.0.0",
     "fetch": "^1.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
-    "puppeteer": "^9.1.1",
-    "sharp": "^0.28.3",
-    "video-url-link": "^0.1.4"
+    "puppeteer": "^10.1.0",
+    "tiktok-scraper": "^1.4.32",
+    "ytdl-core": "^4.8.3"
   }
 }
