--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-multitasker",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
-    "@open-wa/wa-automate": "^4.11.1",
+    "@open-wa/wa-automate": "^4.12.0",
     "abort-controller": "^3.0.0",
     "fetch": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "mathram": "^1.0.5",
     "puppeteer": "^10.1.0",
     "tiktok-scraper": "^1.4.32",
-    "ytdl-core": "^4.8.3"
+    "ytdl-core": "^4.9.0"
   }
 }
