--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-multitasker",
-  "version": "1.3.2",
+  "version": "1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,15 +13,17 @@
     "npm": "7.15.1"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.0.20",
-    "@open-wa/wa-automate": "^4.12.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@open-wa/wa-automate": "^4.17.1",
     "abort-controller": "^3.0.0",
     "fetch": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "mathram": "^1.0.5",
-    "puppeteer": "^10.1.0",
-    "tiktok-scraper": "^1.4.32",
-    "ytdl-core": "^4.9.0"
+    "mutexify": "^1.3.1",
+    "puppeteer": "^10.2.0",
+    "tiktok-scraper": "^1.4.36",
+    "youtube-dl-exec": "^1.2.4",
+    "ytdl-core": "^4.9.1"
   }
 }
