--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # private files
 secret
+secrets.json
 *.data.json
 senders.json
 config.hjson
