--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@iamtraction/google-translate": "^1.1.2",
     "@open-wa/wa-automate": "^4.17.1",
     "abort-controller": "^3.0.0",
     "changelog-parser": "^2.8.0",
