--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@open-wa/wa-automate": "^4.17.1",
     "abort-controller": "^3.0.0",
     "changelog-parser": "^2.8.0",
+    "color": "^4.0.1",
     "command-line-args": "^5.2.0",
     "fetch": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
