--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@iamtraction/google-translate": "^1.1.2",
-    "@open-wa/wa-automate": "^4.17.1",
+    "@open-wa/wa-automate": "^4.21.1",
     "abort-controller": "^3.0.0",
     "changelog-parser": "^2.8.0",
     "color": "^4.0.1",
@@ -30,6 +30,7 @@
     "mathram": "^1.0.5",
     "mutexify": "^1.3.1",
     "puppeteer": "^10.2.0",
+    "sharp": "^0.29.1",
     "tiktok-scraper": "^1.4.36",
     "youtube-dl-exec": "^1.2.4",
     "ytdl-core": "^4.9.1"
