--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the_multitasker",
   "version": "1.5.2",
-  "description": "",
+  "description": "A WhatsApp bot 🤖 written in JavaScript and Node.js.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,13 +13,13 @@
   "author": "Eyal Michon",
   "license": "ISC",
   "engines": {
-    "node": "14.16.0",
-    "npm": "7.15.1"
+    "node": "^14.16.0",
+    "npm": "^7.15.1"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@iamtraction/google-translate": "^1.1.2",
-    "@open-wa/wa-automate": "^4.23.7",
+    "@open-wa/wa-automate": "^4.24.2",
     "abort-controller": "^3.0.0",
     "changelog-parser": "^2.8.0",
     "cheerio": "^1.0.0-rc.10",
@@ -29,12 +29,12 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "mathram": "^1.0.5",
-    "mutexify": "^1.3.1",
-    "puppeteer": "^10.2.0",
-    "sharp": "^0.29.1",
+    "mutexify": "^1.4.0",
+    "puppeteer": "^12.0.1",
+    "sharp": "^0.29.3",
     "tiktok-scraper": "^1.4.36",
-    "user-agents": "^1.0.784",
-    "youtube-dl-exec": "^1.2.4",
+    "user-agents": "^1.0.851",
+    "youtube-dl-exec": "^2.0.0",
     "ytdl-core": "^4.9.1"
   }
 }
