--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
-  "name": "the_multitasker",
-  "version": "1.9.1",
-  "description": "A WhatsApp bot 🤖 written in JavaScript and Node.js.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "gitpush": "git push origin master --tags",
-    "add-commit": "git add release.png package.json package-lock.json CHANGELOG.md && git commit -m \"Release %npm_config_addver%\"",
-    "release-image": "node release-image.js",
-    "release": "npm version --no-git-tag-version %npm_config_newver% && auto-changelog --template changelog-template.hbs -p -u --commit-limit false && npm run release-image && npm run add-commit --addver=%npm_config_newver% && git tag -a %npm_config_newver% -m \"%npm_config_newver%\""
-  },
-  "author": "Eyal Michon",
-  "license": "ISC",
-  "engines": {
-    "node": "^14.16.0",
-    "npm": "^7.15.1"
-  },
-  "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@iamtraction/google-translate": "^1.1.2",
-    "@open-wa/wa-automate": "^4.57.0",
-    "abort-controller": "^3.0.0",
-    "changelog-parser": "^2.8.1",
-    "cheerio": "^1.0.0-rc.11",
-    "color": "^4.2.3",
-    "command-line-args": "^5.2.1",
-    "fetch": "^1.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "fs": "0.0.1-security",
-    "mathram": "^1.0.5",
-    "mutexify": "^1.4.0",
-    "puppeteer": "^16.2.0",
-    "sharp": "^0.30.7",
-    "tiktok-scraper": "^1.4.36",
-    "user-agents": "^1.0.1051",
-    "youtube-dl-exec": "^2.3.1",
-    "ytdl-core": "^4.11.2"
-  }
+    "name": "the_multitasker",
+    "version": "1.9.1",
+    "description": "A WhatsApp bot 🤖 written in JavaScript and Node.js.",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "gitpush": "git push origin master --tags",
+        "add-commit": "git add release.png package.json package-lock.json CHANGELOG.md && git commit -m \"Release %npm_config_addver%\"",
+        "release-image": "node release-image.js",
+        "release": "npm version --no-git-tag-version %npm_config_newver% && auto-changelog --template changelog-template.hbs -p -u --commit-limit false && npm run release-image && npm run add-commit --addver=%npm_config_newver% && git tag -a %npm_config_newver% -m \"%npm_config_newver%\""
+    },
+    "author": "Eyal Michon",
+    "license": "ISC",
+    "engines": {
+        "node": "^16.19.1"
+    },
+    "dependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@iamtraction/google-translate": "^1.1.2",
+        "@open-wa/wa-automate": "^4.66.3",
+        "abort-controller": "^3.0.0",
+        "changelog-parser": "^2.8.1",
+        "cheerio": "^1.0.0-rc.11",
+        "color": "^4.2.3",
+        "command-line-args": "^5.2.1",
+        "fetch": "^1.1.0",
+        "fluent-ffmpeg": "^2.1.2",
+        "fs": "0.0.1-security",
+        "mathram": "^1.0.5",
+        "mutexify": "^1.4.0",
+        "sharp": "^0.32.5",
+        "tiktok-scraper": "^1.4.36",
+        "user-agents": "^1.0.1051",
+        "youtube-dl-exec": "^2.3.1",
+        "ytdl-core": "^4.11.2"
+    }
 }
